Update: リポジトリの解説をgame sandboxへ変更 すごろくを設置する場所を手配 #1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000" />
     <link rel="manifest" crossorigin="use-credentials" href="/manifest.json" />
-    <title>LIFFアプリ開発セット</title>
+    <title>Game Sandbox</title>
     <meta name="robots" content="noindex" />
     <link rel="apple-touch-icon" href="/logo192.png" sizes="192x192" />
     <style>
